@@ -1,3 +1,8 @@
+2008-05-20  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-addto.c: (panel_addto_setup_launcher_drag): use an URI and not
+	a path when setting the drag source for text/uri-list. Fix bug #532171.
+
 2008-05-16  Vincent Untz  <vuntz@gnome.org>
 
 	* panel-menu-items.c: (activate_uri_on_screen): new, based on
